tinyc/test/bad/false-redeclare-struct.c
struct false
{
    int x;
};
int main()
{
    return 0;
}
